force-app/main/default/objects/Income_Currency__c/Income_Currency__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Income Currency</label>
</CustomObject>