force-app/main/default/objects/Income_Currency__c/fields/Agency_Fee__c.field-meta.xml
<CustomField>
    <fullName>Agency_Fee__c</fullName>
    <defaultValue>&apos;HPC_Novidea__Agency_Fee_Currency__c&apos;</defaultValue>
    <label>Agency Fee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>