force-app/main/default/objects/Income_Currency__c/fields/Agent_Discount__c.field-meta.xml
<CustomField>
    <fullName>Agent_Discount__c</fullName>
    <defaultValue>&apos;HPC_Novidea__Premium_Currency__c&apos;</defaultValue>
    <label>Agent Discount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>