force-app/main/default/objects/Income_Currency__c/fields/Agent_Discount_From_Production__c.field-meta.xml
<CustomField>
    <fullName>Agent_Discount_From_Production__c</fullName>
    <label>Agent_Discount_From_Production</label>
    <length>100</length>
    <type>Text</type>
</CustomField>