force-app/main/default/objects/Income_Currency__c/fields/Commission_Amount_from_Production__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount_from_Production__c</fullName>
    <defaultValue>&apos;HPC_Novidea__Premium_Currency__c&apos;</defaultValue>
    <label>Commission Amount from Production</label>
    <length>100</length>
    <type>Text</type>
</CustomField>