force-app/main/default/objects/Income_Currency__c/fields/Commission_From_Production_After_Tax__c.field-meta.xml
<CustomField>
    <fullName>Commission_From_Production_After_Tax__c</fullName>
    <label>Commission From Production After Tax</label>
    <length>100</length>
    <type>Text</type>
</CustomField>