force-app/main/default/objects/Income_Currency__c/fields/Credit_Fees__c.field-meta.xml
<CustomField>
    <fullName>Credit_Fees__c</fullName>
    <defaultValue>&apos;HPC_Novidea__Premium_Currency__c&apos;</defaultValue>
    <label>Credit Fees</label>
    <length>100</length>
    <type>Text</type>
</CustomField>