force-app/main/default/objects/Income_Currency__c/fields/Credit_Fees_From_Production__c.field-meta.xml
<CustomField>
    <fullName>Credit_Fees_From_Production__c</fullName>
    <defaultValue>&apos;HPC_Novidea__Premium_Currency__c&apos;</defaultValue>
    <label>Credit Fees From Production</label>
    <length>100</length>
    <type>Text</type>
</CustomField>