force-app/main/default/objects/Income_Currency__c/fields/Other_Commission__c.field-meta.xml
<CustomField>
    <fullName>Other_Commission__c</fullName>
    <defaultValue>&apos;HPC_Novidea__Premium_Currency__c&apos;</defaultValue>
    <label>Other Commission</label>
    <length>100</length>
    <type>Text</type>
</CustomField>