force-app/main/default/objects/Income_Currency__c/fields/Premium_Bruto__c.field-meta.xml
<CustomField>
    <fullName>Premium_Bruto__c</fullName>
    <defaultValue>&apos;HPC_Novidea__Premium_Currency__c&apos;</defaultValue>
    <label>Premium Bruto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>