force-app/main/default/objects/Income_Currency__c/fields/Premium_To_Pay__c.field-meta.xml
<CustomField>
    <fullName>Premium_To_Pay__c</fullName>
    <label>Premium To Pay</label>
    <length>50</length>
    <type>Text</type>
</CustomField>