force-app/main/default/objects/Income_Currency__c/fields/subagentfees__c.field-meta.xml
<CustomField>
    <fullName>subagentfees__c</fullName>
    <label>subagentfees</label>
    <length>100</length>
    <type>Text</type>
</CustomField>