force-app/main/default/objects/Income_Currency__c/fields/Value_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Value_Date_Field__c</fullName>
    <defaultValue>&apos;HPC_Novidea__Bordero_Date__c&apos;</defaultValue>
    <label>Value Date Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>